# antigine

./: .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: claude.md  settings.local.json
.claude/commands/: cleanup-types.md  fix-imports.md  format.md  review.md  session-end.md  session-start.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
antigine/: __init__.py  run.py
antigine/cli/: __init__.py
antigine/cli/commands/: __init__.py  config.py  feature.py  (+3 more)
antigine/core/: __init__.py  chains.py  config.py  database.py  gdd_manager.py  models.py  project_scaffolding.py  prompts.py  semantic_search.py  setup_wizard.py  tech_stacks.py
antigine/managers/: ProjectLedgerManager.py  ProjectSetupManager.py  __init__.py
core/: chains.py  database.py  models.py  prompts.py
documents/: afie_folder_structure.md  antigine_folder_structure.md  readme.md
documents/architecture/: agent_specifications.md  agents.md  artifacts.md  rags.md  readme.md
documents/design/: feature_sequencer_prompt.md  gdd_prompt.md  gdd_prompt_flash.md  gdd_template.md
documents/development/: roadmap.md
documents/research/: custom_game_engine_stack.md
managers/: ProjectLedgerManager.py  ProjectSetupManager.py  __init__.py
notebooks/: tesing_core_loop_architecture.ipynb  test_chains.ipynb
scripts/: setup_project.py
templates/: example_ledger_entry.json  readme.md  template_ledger.json  template_project.json
tests/: __init__.py  manual_tests.md  run_tests.py  test_database_operations.py  test_feature_request_agent.py  test_gdd_cli_integration.py  test_gdd_controller.py  test_gdd_manager.py  test_init_command.py  test_project_scaffolding.py  test_tech_stacks.py
(+8 files in other folders)
